[gd_scene load_steps=2 format=3 uid="uid://djioryseuxvtk"]

[ext_resource type="Script" path="res://addons/terrain_debugger/controls/tile_map_rect.gd" id="1_omsk6"]

[node name="TileMapRect" type="ReferenceRect"]
script = ExtResource("1_omsk6")

[node name="IndexLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 10.0
offset_bottom = 26.0
size_flags_horizontal = 4
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PaintedIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 2.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
expand_mode = 3
metadata/_edit_use_anchors_ = true
